// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PeriodRow component > matches snapshot for period 'p1' 1`] = `
<DocumentFragment>
  <li
    class="row mt-1 p-1 bg-secondary-subtle guest-period-row"
  >
    <div
      class="col period-ordering"
    >
      <div
        class="dropdown"
      >
        <a
          aria-expanded="false"
          class=" dropdown-toggle"
          href="#"
          role="button"
        >
          <span
            aria-label="three-dots icon"
            class="bi icon bi-three-dots "
            role="img"
          />
        </a>
        <ul
          class="dropdown-menu "
        >
          <li
            data-testid="ddi_0"
          >
            <a
              class="dropdown-item"
              href="#"
            >
              Add another Period
            </a>
          </li>
          <li
            data-testid="ddi_1"
          >
            <a
              class="dropdown-item"
              href="#"
            >
              Delete Period
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="col period-id"
    >
      <input
        class="form-control is-valid"
        id="field-pid_1"
        name="pid_1"
        required=""
        type="text"
      />
    </div>
    <div
      class="col period-stream"
    >
      <select
        class="form-select is-valid"
        name="stream_1"
        required=""
      >
        <option
          value=""
        >
          --Select a stream--
        </option>
        <option
          value="1"
        >
          Big Buck Bunny
        </option>
        <option
          value="2"
        >
          Tears of Steel
        </option>
      </select>
    </div>
    <div
      class="col period-start"
    >
      <input
        class="form-control is-valid"
        min="00:00:00"
        name="start_1"
        step="1"
        type="time"
      />
    </div>
    <div
      class="col period-duration"
    >
      <input
        class="form-control is-valid"
        min="00:00:01"
        name="duration_1"
        step="1"
        type="time"
      />
    </div>
    <div
      class="col period-tracks"
    >
      <button
        aria-disabled="false"
        class="btn btn-sm m-1 btn-warning"
      >
        0/3 tracks
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`PeriodRow component > matches snapshot for period 'p2' 1`] = `
<DocumentFragment>
  <li
    class="row mt-1 p-1 bg-secondary-subtle guest-period-row"
  >
    <div
      class="col period-ordering"
    >
      <div
        class="dropdown"
      >
        <a
          aria-expanded="false"
          class=" dropdown-toggle"
          href="#"
          role="button"
        >
          <span
            aria-label="three-dots icon"
            class="bi icon bi-three-dots "
            role="img"
          />
        </a>
        <ul
          class="dropdown-menu "
        >
          <li
            data-testid="ddi_0"
          >
            <a
              class="dropdown-item"
              href="#"
            >
              Add another Period
            </a>
          </li>
          <li
            data-testid="ddi_1"
          >
            <a
              class="dropdown-item"
              href="#"
            >
              Delete Period
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="col period-id"
    >
      <input
        class="form-control is-valid"
        id="field-pid_2"
        name="pid_2"
        required=""
        type="text"
      />
    </div>
    <div
      class="col period-stream"
    >
      <select
        class="form-select is-valid"
        name="stream_2"
        required=""
      >
        <option
          value=""
        >
          --Select a stream--
        </option>
        <option
          value="1"
        >
          Big Buck Bunny
        </option>
        <option
          value="2"
        >
          Tears of Steel
        </option>
      </select>
    </div>
    <div
      class="col period-start"
    >
      <input
        class="form-control is-valid"
        min="00:00:00"
        name="start_2"
        step="1"
        type="time"
      />
    </div>
    <div
      class="col period-duration"
    >
      <input
        class="form-control is-valid"
        min="00:00:01"
        name="duration_2"
        step="1"
        type="time"
      />
    </div>
    <div
      class="col period-tracks"
    >
      <button
        aria-disabled="false"
        class="btn btn-sm m-1 btn-warning"
      >
        0/3 tracks
      </button>
    </div>
  </li>
</DocumentFragment>
`;
